using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SPG_Fachtheorie.Aufgabe1.Model
{
    public enum AppointmentStateType
    {
        Pending,
        Confirmed,
        Deleted
    }
}
